1. Fix for bugs 73520 and 73521 2. Fix for bug 73557 3. Fix for bug 73583 4. Fixed login dialog so that it behaves better. 5. Added code to sync the POBox(es) when refreshing the My iFolders list. 6. Fixed Accounts dialog to prevent exceptions. 7. Updated credits dialogs to include some names that were missing.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4086 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/FormsTrayApp/FormsTrayApp.resx
+++ b/ifolder/src/FormsTrayApp/FormsTrayApp.resx
@@ -604,9 +604,6 @@
   <data name="fatalErrorTitle">
     <value>Unable to Start iFolder Services</value>
   </data>
-  <data name="iFolderRunning">
-    <value>There is already an instance of iFolder running.</value>
-  </data>
   <data name="downloading">
     <value>Downloading: {0}</value>
   </data>
@@ -669,5 +666,8 @@
   </data>
   <data name="deleteUnknown">
     <value>Deleting on server: {0}</value>
+  </data>
+  <data name="myiFolders">
+    <value>My iFolders</value>
   </data>
 </root>
