--- a/ifolder/src/FormsTrayApp/FormsTrayApp.resx
+++ b/ifolder/src/FormsTrayApp/FormsTrayApp.resx
@@ -619,6 +619,9 @@
   <data name="clientUpgradePrompt">
     <value>A newer version "{0}" of the iFolder Client is available. Would you like to upgrade now?</value>
   </data>
+  <data name="failedAuth">
+    <value>The user name or password is invalid.</value>
+  </data>
   <data name="graceLogin">
     <value>Your password has expired.  You have {0} grace logins remaining.</value>
   </data>
