Fixes for bug 73582: 1. Added new web method RenameAndResolveConflict to rename a conflicting (local) file out of the way so that the server file can be resolved to the same name. 2. Modified ConflictResolver to special case a user with read-only access to an iFolder.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4184 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/iFolderShell/ConflictResolver.resx
+++ b/ifolder/src/iFolderShell/ConflictResolver.resx
@@ -2620,4 +2620,7 @@
 	<data name="openFileError">
 		<value>Unable to open the file.</value>
 	</data>
+	<data name="readOnlyInfo">
+		<value>Your ability to resolve conflicts is limited because you have read-only rights to this iFolder.  If there are conflicts that you are not allowed to resolve, the owner of this iFolder will need to fix the conflicts for you.</value>
+	</data>
 </root>
