1. Moved the creation of the enterpise domain out of the store constructor and placed it in the EnterpriseProvider on the server. This allowed SimpleServer to now be set properly as an enterprise type server. 2. Fixed identity to not call back into the store at constuction time. 3. Updated SimpleServer readme to reflect new Domain tag. 4. Modified Exists call in Configuration to check for existence of a section.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk/simias@4188 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/other/SimpleServer/README
+++ b/other/SimpleServer/README
@@ -17,10 +17,14 @@ To install the SimpleServer module modify the following lines
 to your Simias.config file located at $(HOME)/.local/share/simias for Linux or
 %HOMEDRIVE%%HOMEPATH%\Local Settings\Application Data\simias for Windows.
 
-Modify the ServiceManager section of the Simias.config file. It sould look
-like this when done:
+Modify the ServiceManager section of the Simias.config file and add the domain
+tag. It sould look like this when done:
 
 <configuration>
+  <section name="Domain">
+    <setting name="SimpleServerName" value="Simias SimpleServer" />
+  </section>
+
   <section name="ServiceManager">
     <setting name="Services">
       <Service name="Simias Change Log Service" assembly="Simias" enabled="True" type="Thread" class="Simias.Storage.ChangeLog" />
