--- a/ifolder/src/FormsTrayApp/FormsTrayApp.resx
+++ b/ifolder/src/FormsTrayApp/FormsTrayApp.resx
@@ -673,4 +673,10 @@
   <data name="myiFolders">
     <value>My iFolders</value>
   </data>
+  <data name="verifyCert">
+    <value>Unable to verify the identity of {0} as a trusted site.  Before accepting this certificate, you should examine the certificate by clicking Show Details.  Do you want to accept this certificate?</value>
+  </data>
+  <data name="verifyCertTitle">
+    <value>Unable to Verify Identity</value>
+  </data>
 </root>
