--- a/simias/README
+++ b/simias/README
@@ -1,98 +1,2 @@
-The iFolder Project website can be found at:
-http://forge.novell.com/modules/xfmod/project/?ifolder
-
-Simias is a technology that will allow various types of data to be stored and
-related in what is known as a collection.  Initially Simias is the underlying
-data store for the iFolder project although it has potiential to do much more.
-Simias is free software, licensed under the GNU GENERAL PUBLIC LICENSE
-(see the COPYING file).
-
-Copyright (C) 2004 Novell, Inc.
-
-This product includes  software developed  by the  Apache Software Foundation
-(http://www.apache.org/).
-
-----------------
-Building Simias
-----------------
-
-Linux
-------
-    Tested platforms:
-        SuSE Linux 9 with Ximian Desktop 2 (XD2)
-        Red Hat Linux 9 with XD2
-      
-    You will need to have the following installed and working on your machine:
-     
-    - mono 0.31 (or later)
-    - gtk-sharp 0.17 (or later)
-    
-    You can get mono and gtk-sharp from http://www.go-mono.com or Ximian Red
-    Carpet.
-    
-    - automake 1.7 (or later)
-    - autoconf 2.57 (or later)
-    - m4 1.40 (or later)
-       
-Win32
-------
-    Tested platforms:
-        Windows XP Professional
-        Windows 2000 Professional
-    
-    You will need to have the following installed and working on your machine:
-    
-    - Microsoft Visual Studio .NET
-    
-        We currently rely on the csc and cl compilers from Visual Studio .NET.
-        The MSI and MSM packages are also built using Visual Studio .NET.
-        We hope to migrate soon to a Windows build environment that only
-        requires the .NET Framework SDK, not Visual Studio .NET.
-    
-    - Cygwin
-    
-        We recommend installing the following packages in addition to the
-        default packages:
-        
-        Devel: autoconf, automake, libtool, make, pkgconfig, cvs, gcc, gcc-g++
-        Editors: vim
-        Net: openssh, openssl
-        Text: more
-        Utils: clear
-        
-        If your Windows environment is not set up to find the Visual Studio
-        .NET tools, add the following line to cygwin.bat somewhere before it
-        starts up the bash shell:
-        
-        call "%VS71COMNTOOLS%\vsvars32.bat" > NUL
-
-OS X
------
-    We are working to get Simias working on OS X.  Right now there are some 
-    issues too large to cover here.  Once you do get mono going on OS X, the
-    Simias project should work much like it does on Linux.
-
-All Platforms
---------------
-    To compile from a source distribution:
-        ./configure --prefix=<install_path>
-        make
-        make install
-    
-    To compile source from CVS:
-        ./autogen.sh --prefix=<install_path>
-        make
-        make install
-    
-
----------------------
-Discussion & Support
----------------------
-
-    A mailing list for Simias and iFolder discussion is available.
-
-    You can subscribe to the mailing list by visiting:
-
-        http://forge.novell.com/mailman/listinfo/ifolder-dev
-
+See http://www.ifolder.com/ for more information on the iFolder open source project.
 
