modified the README since we now only need one thread service for Simple Server
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk/simias@4242 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/other/SimpleServer/README
+++ b/other/SimpleServer/README
@@ -18,7 +18,7 @@ to your Simias.config file located at $(HOME)/.local/share/simias for Linux or
 %HOMEDRIVE%%HOMEPATH%\Local Settings\Application Data\simias for Windows.
 
 Modify the ServiceManager section of the Simias.config file and add the domain
-tag. It sould look like this when done:
+tag. It should look like this when done:
 
 <configuration>
   <section name="Domain">
@@ -28,7 +28,6 @@ tag. It sould look like this when done:
   <section name="ServiceManager">
     <setting name="Services">
       <Service name="Simias Change Log Service" assembly="Simias" enabled="True" type="Thread" class="Simias.Storage.ChangeLog" />
-      <Service name="Simias Simple Server Domain Provider" assembly="Simias.SimpleServer.dll" enabled="True" type="Thread" class="Simias.SimpleServer.Authentication" />
       <Service name="Simias Simple Server" assembly="Simias.SimpleServer.dll" enabled="True" type="Thread" class="Simias.SimpleServer.Service" />
     </setting>
   </section>
