Handle new return code from login methods.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4325 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/FormsTrayApp/ServerInfo.resx
+++ b/ifolder/src/FormsTrayApp/ServerInfo.resx
@@ -1147,6 +1147,9 @@
   <data name="accountDisabled">
     <value>The user account is disabled.  Please contact your network administrator for assistance. </value>
   </data>
+  <data name="iFolderAccountDisabled">
+    <value>The iFolder account is disabled.  Please contact your network administrator for assistance.</value>
+  </data>
   <data name="accountLockout">
     <value>The user account has been locked out.  Please contact your network administrator for assistance.</value>
   </data>
