--- a/ifolder/src/FormsTrayApp/Preferences.resx
+++ b/ifolder/src/FormsTrayApp/Preferences.resx
@@ -3410,7 +3410,10 @@
     <value>An error was encountered while connecting to the iFolder server.  Please verify the information entered and try again.  If the problem persists, please contact your network administrator.</value>
   </data>
   <data name="accountDisabled">
-    <value>The user account is disabled.  Please contact your network administrator for assistance. </value>
+    <value>The user account is disabled.  Please contact your network administrator for assistance.</value>
+  </data>
+  <data name="iFolderAccountDisabled">
+    <value>The iFolder account is disabled.  Please contact your network administrator for assistance.</value>
   </data>
   <data name="accountLockout">
     <value>The user account has been locked out.  Please contact your network administrator for assistance.</value>
