--- a/ifolder/src/FormsTrayApp/FormsTrayApp.resx
+++ b/ifolder/src/FormsTrayApp/FormsTrayApp.resx
@@ -682,4 +682,10 @@
   <data name="verifyCertTitle">
     <value>Unable to Verify Identity</value>
   </data>
+  <data name="createAccount">
+    <value>No iFolder accounts exist on this computer.  Would you like to set up an account for an iFolder server now?</value>
+  </data>
+  <data name="createAccountTitle">
+    <value>Setup iFolder Account</value>
+  </data>
 </root>
