Updated prompt per Trent's suggestion (Bug 76808).
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4392 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/FormsTrayApp/FormsTrayApp.resx
+++ b/ifolder/src/FormsTrayApp/FormsTrayApp.resx
@@ -683,7 +683,7 @@
     <value>Unable to Verify Identity</value>
   </data>
   <data name="createAccount">
-    <value>No iFolder accounts exist on this computer.  Would you like to set up an account for an iFolder server now?</value>
+    <value>The iFolder client is now installed and ready to use.  To begin using iFolder, you must first setup an iFolder account.  Would you like to setup your iFolder account now?</value>
   </data>
   <data name="createAccountTitle">
     <value>Setup iFolder Account</value>
